@@ -1,6 +1,7 @@
 Revision history for File::DataClass
 
 0.20.0    2013-05-07 21:00:34
+          - Can set trait namespace
           - Exception manages own trait loading
 
 0.19.1    2013-05-02 15:11:09
